# JDBD

./: .gitignore  Makefile  build.gradle  settings.gradle
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/jni/: common.rs  mod.rs  util.rs
lib/src/jni/mysql_driver/: execute.rs  initialize.rs  mod.rs  query.rs  unload.rs
lib/src/jni/postgresql_driver/: execute.rs  initialize.rs  mod.rs  query.rs  unload.rs
libs/jdbd_mysql/: Cargo.toml
libs/jdbd_mysql/src/jni/: execute.rs  initialize.rs  mod.rs  query.rs  unload.rs
src/main/java/dev/array21/jdbd/: DatabaseDriver.java  Pair.java  PreparedStatement.java
src/main/java/dev/array21/jdbd/annotations/: Nullable.java
src/main/java/dev/array21/jdbd/datatypes/: PreparedStatement.java  SqlParameter.java  SqlParameterType.java  SqlRow.java
src/main/java/dev/array21/jdbd/drivers/: DriverManager.java  MysqlDriver.java  MysqlDriverFactory.java  PostgreSqlDriver.java  PostgreSqlDriverFactory.java
src/main/java/dev/array21/jdbd/exceptions/: DriverUnloadedException.java  SqlException.java  SqlTypeMismatchException.java  UnboundPreparedStatementException.java  UnsupportedOperatingSystemException.java
src/main/java/dev/array21/jdbd/util/: LibraryUtils.java  Pair.java
src/test/java/dev/array21/jdbd/: PreparedStatementTest.java
src/test/java/dev/array21/jdbd/datatypes/: PreparedStatementTest.java  SqlRowTest.java
src/test/java/dev/array21/jdbd/exceptions/: DriverUnloadedExceptionTest.java  SqlTypeMismatchExceptionTest.java  UnboundPreparedStatementExceptionTest.java  UnsupportedOperatingSystemExceptionTest.java
(+2 files in other folders)
