[package]
name = "jdbd"
version = "1.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.19.0"
postgres = "0.19.1"

[dependencies.flate2]
version = "1.0.22"
features = ["zlib"]

[dependencies.mysql]
version = "22.0.0"
default-features = false